LAB 3 finished