@@ -1,26 +1,29 @@
 package DataTypes;
 
 import java.util.LinkedList;
+import java.util.ArrayList;
 import Exception.EmptyMyListException;
 
 /**
  * Created by vladc on 22.10.2016.
  */
 public class MyList<T> implements MyIList<T> {
-    private LinkedList<T> queue;
+    private ArrayList<T> queue;
 
     public MyList() {
-        this.queue = new LinkedList<T> ();
+        this.queue = new ArrayList<> ();
     }
 
     public void enqueue(T e) {
-        this.queue.addFirst(e);
+        this.queue.add(e);
     }
 
     public T dequeue() throws EmptyMyListException {
         if (queue.isEmpty())
             throw new EmptyMyListException("Exception. MyList is empty.");
-        return queue.removeLast();
+        T ret = this.queue.get(0);
+        this.queue.remove(0);
+        return ret;
     }
 
     public boolean isEmpty() {
@@ -29,6 +32,12 @@ public class MyList<T> implements MyIList<T> {
 
     @Override
     public String toString() {
-        return queue.toString();
+        String str = "";
+
+        for (T t : this.queue) {
+            str += t.toString();
+            str += "\n";
+        }
+        return str;
     }
 }
